# text-replacer-api

./: .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: api.py  format.py  version.py
app/config/: api_config.py
app/functions/: replacer.py
app/models/api/: format_request.py  format_response.py  version_response.py
app/models/functions/: regex_pattern.py  replace_args.py  replace_param.py
makefiles/: env.mk  formatter.mk
tests/: config.py
tests/api/cloud_run/: test_cloud_run_api_format.py  test_cloud_run_api_version.py
tests/api/local/: test_local_api_format.py  test_local_api_version.py
tests/functions/: test_replacer.py
