[tool.poetry]
name = "text-replacer-api"
version = "1.0.0"
description = ""
authors = ["v-crn <var.cyrano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
autoflake = "^1.4"
flake8 = "^3.9.2"
mypy = "^0.910"
pyproject-flake8 = "^0.0.1a2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore = "E203,W503,W504"
max-complexity = 20

[tool.isort]
combine_as_imports = "True"
ensure_newline_before_comments = "True"
force_grid_wrap = 0
include_trailing_comma = "True"
line_length = 88
multi_line_output = 3
use_parentheses = "True"
skip = [".git", ".tox", ".venv", ".eggs", "build", "dist", "docs"]

[tool.mypy]
strict_optional = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
disallow_any_generics = "True"
check_untyped_defs = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module = ["requests"]
ignore_missing_imports = "True"
